Inicio do capitulo de resultados

--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -1,5 +1,25 @@
 \chapter{Experimentos e Resultados}
 \label{chap:resultados}
 % ----------------------------------------------------------
+Este capítulo vem apresentar os experimentos realizados como forma de
+verificação do Processo de Avaliação de Capacidade por Inferência de 
+Desempenho proposto no Capítulo~\ref{chap:processo}. Inicialmente é
+apresentada a metodologia utilizada para construção dos experimentos, 
+com a descrição da Aplicação sob Teste escolhida, como foi implantada e 
+como foram realizadas as execuções para coleta de dados de desempenho. Depois
+são apresentados os resultados obtidos por cada uma das 9 Heurísticas ao
+fazer a Avaliação de Capacidade da Aplicação. Esses resultados são usados 
+para uma comparação qualitativa das Heusrísticas entre si e para atestar
+a eficiência do Processo de Avaliação de Capacidade proposto e sua técnica 
+de Inferência de Desempenho tanto quanto à economia de tempo e custo como  
+quanto à precisão de acerto de seuas predições.
 
+\section{Metodologia}
+\label{sec:resultados_metodologia}
+A fim de validar a eficiência da Inferência de Desempenho no apoio
+ao Planejamento de Capacidade, foram realizadas seções de avaliação de
+capacidade de uma aplicação implantada em um provedor de nuvem de
+infraestrutura como serviço.
+
+A aplicação escolhida foi o WordPress
 % ----------------------------------------------------------
