--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -187,6 +187,12 @@
 	note = {\url{http://jmob.ow2.org/rubbos.html}},
 	year = {2012}
 }
+@Unpublished{ wordpress,
+	author = {WordPress},
+	title = {WordPress: Blog Tool, Publishing Platform, and CMS},
+	note = {\url{https://wordpress.org/}},
+	year = {2014}
+}
 @inproceedings{cunhaavalia,
   title={Avaliação do Custo por Usuário de uma Aplicação de Rede Social na Amazon EC2},
   author={Cunha, M. and Mendonca, N. and Sampaio, A.},
