Capitulo de Resultados

--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -21,5 +21,10 @@ ao Planejamento de Capacidade, foram realizadas seções de avaliação de
 capacidade de uma aplicação implantada em um provedor de nuvem de
 infraestrutura como serviço.
 
-A aplicação escolhida foi o WordPress
+A aplicação escolhida foi o WordPress \cite{wordpress}, um motor de construção 
+e administração de \emph{blogs}. Sua escolha foi motivada por ser uma aplicação
+bem conhecida, de utilização via web, ideal para implantação em ambiente de
+nuvem, e com componentes arquiteturais escaláveis. Além disso, o fluxo de 
+utilização típico apresenta características bem diversificadas quanto à utilização
+de recursos de CPU e memória, rede, sistema de arquivos e banco de dados.  
 % ----------------------------------------------------------
